# Giaic-hackathon

./: README.md
Hackathon 2 phase I/: .gitignore  README.md  main.py  pyproject.toml  test_demo.txt
Hackathon 2 phase I/.claude/: settings.local.json
Hackathon 2 phase I/.claude/agents/: todo-quality-reviewer.md
Hackathon 2 phase I/.specify/memory/: constitution.md
Hackathon 2 phase I/history/prompts/001-console-todo/: 002-console-todo-specification.spec.prompt.md  003-implementation-plan.plan.prompt.md  004-task-generation.tasks.prompt.md
Hackathon 2 phase I/history/prompts/constitution/: 001-initial-constitution-creation.constitution.prompt.md
Hackathon 2 phase I/specs/001-console-todo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
Hackathon 2 phase I/specs/001-console-todo/checklists/: requirements.md
Hackathon 2 phase I/specs/001-console-todo/contracts/: cli-commands.md
Hackathon 2 phase I/src/cli/: commands.py  menu.py
Hackathon 2 phase I/src/models/: task.py
Hackathon 2 phase I/src/services/: task_manager.py
Hackathon 2 phase I/src/utils/: formatters.py  validators.py
Hackathon 2 phase I/tests/: conftest.py
Hackathon 2 phase II/backend/frontend/: README.md
Hackathon 2 phase III/history/prompts/constitution/: 001-phase-iii-chatbot-constitution.constitution.prompt.md
